# BE-NutritionAi

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: database.py  main.py  models.py  schemas.py
app/auth/: login.py  oauth.py  utils.py
app/formdata/: form.py
app/plan_generation/: langchain_utils.py
app/user/: user.py
